# ide

./: README.md
cursor/: .cspell.config.yaml  .pre-commit-config.yaml  README.md  extensions.json  keybindings.json  projects.json  pyproject.toml  settings.json
terminal/: README.md  settings.json
ubuntu/: README.md  bootstrap.py
ubuntu/dotfiles/: .bash_aliases  .gitconfig
